fixes and optimizes